<resources>
    <string name="app_name">CyBot Client</string>
    <string name="radio_connecting">Connecting…</string>
    <string name="radio_connected">Connected</string>
    <string name="error_msg">Error</string>
    <string name="scan">Scan</string>
    <string name="reverse">Reverse</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="forward">Forward</string>
    <string name="radio_make_connection">Click to Connect</string>
    <string name="command">Command</string>
    <string name="send">Send</string>
    <string name="incremental">Incremental</string>
    <string name="clear_log">Clear Log</string>
    <string name="disconnected">Disconnected</string>
    <string name="radio_disconnecting">Disconnecting…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stop">Stop</string>
</resources>